[package]
name = "blinky"
version = "0.1.0"
authors = ["nosuz <nosuzuki@postcard.st>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
embedded-hal = "0.2.7"

esp-idf-sys = { version = "0.32", features = ["binstart"] }
esp-idf-hal = "0.40.0"

#esp-idf-sys = { version = "0.31.6", features = ["binstart"] }
#esp-idf-hal = "0.39.3"
#esp-idf-hal = "0.38.1"

[build-dependencies]
embuild = "0.30.4"
anyhow = "1"
